package helpers;

public class Categoria {

    private String nombre;

    public Categoria(String categoriaNombre) {
    }
}
