package helpers;

public enum Contenido {
    FOTO, VIDEO
}
