package helpers;

public enum EstadoSolicitud {
    ACEPTADA, RECHAZADA, PENDIENTE
}
