package usuarios;

public class DatosUsuario {
    private String nombre;
    private String apellido;
    private Integer edad;


    public DatosUsuario(String nombre, String apellido, Integer edad) {
        this.nombre = nombre;
        this.apellido = apellido;
        this.edad = edad;
    }
}
